2004-05-07  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b100

	* Change:  Add missing piece of JS for the localGetElementsByTagName()
	  code

2004-05-06  Jens Tkotz <jens@peino.de>  1.4.4-cvs-b99

        * Fix: Links to docs and diagnostics(!) didnt work with empty config.php
               ($gallery->app->photoAlbumURL is not set)

2004-05-05  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b98

	* Change: JS shim to make getElementsByTagName() less browser
	  version dependant

2004-05-05  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b97

	* Change: Config wizard now starts with submit buttons disabled.  They
	  are enabled during document.onload using JavaScript.  This will
	  prevent errors from occuring due to people pressing Next before the page has
	  completed loading, thereby not sending all of the config data to the next page.

2004-05-04 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b96

	* Fix: Warning in when recovering password with adding isset to userData.inc.
		Thanks to floridave.

2004-05-04  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b95

	* Change: Allow doCommand("delete-comment") to use the $return
	  var

	* Change: Extra debug output when using dismissAndLoad() to
	  display $url for troubleshooting.

	* Change: Correct "view_album" to "view_photo" in commentdraw.inc

2004-05-04 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b94

	* Fix: Adjust util.php due to renamed config option.
	
	* Change: removed unused/debug code.

2004-05-04 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b93

	* New: Added config option for maximum length of comments.

	* Change: Rewrite of navigator.inc and navphoto.inc

	* Fix: Images for Voting Result Graph were not found when embedded.

	* Fix: Removed Bigger border around breadcrumb when not on search page. (Introduced in b81)

	* Changes in setup/frame_test.php:
	  - Corrected use of doctype();
	  - Use of init.php
	  - Use of constant GALLERY_BASE