@@ -1,3 +1,8 @@
+2004-05-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b101
+
+	* Change:  Use unhtmlentities() instead of strtr() - this allows
+	  us to use html_entity_decode() if it's present
+
 2004-05-07  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b100
 
 	* Change:  Add missing piece of JS for the localGetElementsByTagName()
